--- a/styles/main.css
+++ b/styles/main.css
@@ -176,7 +176,7 @@ main .feed .post img {
     width: 250px;
     height: auto;
     display: block;
-    margin: auto;}
+    margin: 16px;}
 
 /* tag colors */
 .pu {background: #b473ff80;
@@ -243,7 +243,7 @@ footer {
     main {width: calc(100vw - 48px);}
     main .feed p, h1,h2,h3,h4,h5,h6 {text-align: left;}
     main .feed .post {max-width: calc(100vw - 48px);}
-    main .feed .post img {width: 200px; height: auto;}
+    main .feed .post img {width: 200px; height: auto; margin: auto;}
     main .post-meta {padding: 16px 0 0 0; margin: 0; width: calc(100vw - 48px);}
     main .feed {width: calc(100vw - 48px); margin-top: 0; text-align: center;}
     footer {width: calc(100vw - 48px);}}
