--- a/styles/about.css
+++ b/styles/about.css
@@ -11,28 +11,32 @@ COLOR SELECTIONS:
     LINKS: #000000;
     ACCENT: #C0E8FF;
     SECONDARY TEXT: #AAAAAA;
-
 */
 
-main {display: block; 
-    border: 1px solid #eeeeee;
-    padding: 16px 32px;
+main {
+    display: block;
     max-width: inherit;
     color: #5a5a5a;
-    margin-top: 32px;
-    transition: all ease 0.4s;}
-main:hover {
-    transform: translate(8px, 8px);
-    box-shadow: -8px -8px #eee;}
+    padding: 24px;
+    margin-top: 24px;
+}
 p {
     line-height: 1.3em;
-    font-family:  'Radley', serif;}
-main a, main a:hover {text-decoration: none;
-    color: #5a5a5a;}
-.bl-emphasis {color: #3d3dff;
+    font-family:  'Radley', serif;
+}
+#sidebar .tagline {
+    font-family: 'Chillax', sans-serif;
+    color: #000;
+}
+main a, main a:hover {
+    text-decoration: none;
+    color: #5a5a5a;
+}
+.bl-emphasis {
+    color: #3d3dff;
     font-weight: bold;
-    border-bottom: 2px solid;}
-
+    border-bottom: 2px solid;
+}
 @media only screen and (max-width: 600px) {
-    main:hover {transform: none; box-shadow: none;}
+
 }
